Add first service controller to the new API.
